2006-10-27  David Trowbridge  <trowbrds@gmail.com>

	* src/fe-gnome/migration.c:
	  - Another possible crasher.

2006-10-27  David Trowbridge  <trowbrds@gmail.com>

	* src/fe-gnome/pixmaps.c:
	* src/fe-gnome/pixmaps.h:
	* src/fe-gnome/userlist-gui.c:
	* src/fe-gnome/userlist.c:
	D data/voice.png:
	* data/Makefile.am:
	A data/icons/hicolor/16x16/apps/xchat-gnome-status-voice.png:
	* data/icons/hicolor/16x16/apps/Makefile.am:
	  - Move (currently crapp) voice icon into the icon theme.

2006-10-27  David Trowbridge  <trowbrds@gmail.com>

	* configure.ac
	D data/xchat-gnome-small.png
	* data/icons/hicolor/Makefile.am
	A data/icons/hicolor/128x128
	A data/icons/hicolor/128x128/apps/Makefile.am
	A data/icons/hicolor/128x128/apps
	A data/icons/hicolor/128x128/apps/xchat-gnome.png
	A data/icons/hicolor/128x128/Makefile.am
	  - Might as well install the 128x128 logo into a icontheme dir.

2006-10-27  David Trowbridge  <trowbrds@gmail.com>

	* src/fe-gnome/main-window.c:
	* data/icons/hicolor/22x22/apps/Makefile.am:
	A data/icons/hicolor/22x22/apps/xchat-gnome-users.png:
	* data/icons/hicolor/16x16/apps/Makefile.am:
	A data/icons/hicolor/16x16/apps/xchat-gnome-users.png:
	  - Import the tango users icon into here, since the system icon theme
	    doesn't have an icon with that name :(

2006-10-27  David Trowbridge  <trowbrds@gmail.com>

	* src/fe-gnome/preferences-page-plugins.c:
	* src/fe-gnome/about.c:
	* configure.ac:
	* data/Makefile.am:
	D data/plugin-manager.png:
	A data/icons/hicolor/22x22/apps/xchat-gnome-plugin.svg:
	A data/icons/hicolor/22x22/apps/xchat-gnome-plugin.png:
	A data/icons/hicolor/16x16/apps/xchat-gnome-plugin.svg:
	A data/icons/hicolor/16x16/apps/xchat-gnome-plugin.png:
	A data/icons/hicolor/scalable/Makefile.am:
	A data/icons/hicolor/scalable:
	A data/icons/hicolor/scalable/apps:
	A data/icons/hicolor/scalable/apps/xchat-gnome-plugin.svg:
	A data/icons/hicolor/scalable/apps/Makefile.am:
	* data/icons/hicolor/Makefile.am: